--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,11 @@
-# BUILD PHASE
 FROM node:alpine as builder
-WORKDIR /app
-COPY package.json .
+WORKDIR '/app'
+COPY ./package.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-# RUN PHASE
 FROM nginx
 EXPOSE 3000
-COPY /nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /app/build /usr/share/nginx/html
